mod19 adaptive pagination

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -38,6 +38,7 @@ img {
     display: block; //по-умолч изоюражения строковые элементы
     max-width: 100%; //чтобы были респонсивными по-умолч . имеют маки ширину и имеют возможность масштабироваться, а не оставаться фиксированного указанного размера
     height: auto;
+    object-fit: cover; //чтобы растягивались ПРОПОРЦИОНАЛЬНО динамически картинки при расширении экрана
 }
 
 a {
