--- a/scss/layouts/_formats-section.scss
+++ b/scss/layouts/_formats-section.scss
@@ -26,6 +26,34 @@
         overflow: hidden;
     }
 
+    &__list {
+        // отступ до pagination точек под слайдером swiper
+        margin-bottom: 32px;
+    }
+
+    &__button {
+        //убрать круглые кнопки влево вправо слайдера для моб.версии
+        //для моб.версии
+
+        // не убираются кнопки на моб версии!!! ф12 - зачеркнута эта команда
+        display: none;
+
+        // @media screen and (min-width: 768px) {
+        @media screen and (min-width: $bp-tablet) {
+            display: flex;
+        }
+    }
+
+    // //  исправила так:
+    // &__button {
+    //     @media screen and (max-width: $bp-tablet) {
+    //         // display: none !important; // Добавляем !important для приоритета
+    //         display: none; // Добавляем !important для приоритета
+    //     }
+    // }
+
+
+
     // убираю - нет в уроке 19 этого на экране
     // //перенесен из _format-card.scss
     // // .formats-title {
