--- a/scss/main.scss
+++ b/scss/main.scss
@@ -812,123 +812,126 @@
 @import './layouts/contact-section';
 
 
-/* Footer */
-.footer {
-    padding: 32px 0;
-    /* без этого не виден декор  before хлебец после bottom 0 у before */
-    /* это надо т.к. именно относительно footer позицонируем это изображение декор before */
-    position: relative;
-    /* background-image: url('../images/footer-background.jpg'); */
-    /* png - Прозрачный, чтобы достичь темного цвета фона, как в макете */
-    background-image: url("../images/footer-background.png");
-    background-color: var(--color-primary-dark);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-}
+// /* Footer */
+// .footer {
+//     padding: 32px 0;
+//     /* без этого не виден декор  before хлебец после bottom 0 у before */
+//     /* это надо т.к. именно относительно footer позицонируем это изображение декор before */
+//     position: relative;
+//     /* background-image: url('../images/footer-background.jpg'); */
+//     /* png - Прозрачный, чтобы достичь темного цвета фона, как в макете */
+//     background-image: url("../images/footer-background.png");
+//     background-color: var(--color-primary-dark);
+//     background-repeat: no-repeat;
+//     background-position: center;
+//     background-size: cover;
+// }
 
-.footer::before,
-.footer::after {
-    position: absolute;
-    bottom: 0;
-    background-repeat: no-repeat;
-    content: "";
-}
+// .footer::before,
+// .footer::after {
+//     position: absolute;
+//     bottom: 0;
+//     background-repeat: no-repeat;
+//     content: "";
+// }
 
-.footer::before {
-    /* стал блоковым, вертикално располаг */
-    /* position: absolute;  одинаковые - вверх */
-    width: 180px;
-    height: 120px;
-    /* поместить в нижний левый угол хлебец-декор before */
-    /* bottom: 0; одинаковые - вверх */
-    left: 0;
-    /* размеры задали явно, поэтому меняем на 100% */
-    /* background-size: 180px 120px; */
-    /* убрали 100% т.к. доавили no-repeat */
-    /* background-size: 100%; */
-    /* background-repeat: no-repeat; одинаковые - вверх */
-    background-image: url("../images/decor-bread-small.png");
-    /* content: ""; одинаковые - вверх */
-}
+// .footer::before {
+//     /* стал блоковым, вертикално располаг */
+//     /* position: absolute;  одинаковые - вверх */
+//     width: 180px;
+//     height: 120px;
+//     /* поместить в нижний левый угол хлебец-декор before */
+//     /* bottom: 0; одинаковые - вверх */
+//     left: 0;
+//     /* размеры задали явно, поэтому меняем на 100% */
+//     /* background-size: 180px 120px; */
+//     /* убрали 100% т.к. доавили no-repeat */
+//     /* background-size: 100%; */
+//     /* background-repeat: no-repeat; одинаковые - вверх */
+//     background-image: url("../images/decor-bread-small.png");
+//     /* content: ""; одинаковые - вверх */
+// }
 
-.footer::after {
-    /* стал блоковым, вертикално располаг */
-    /* position: absolute; одинаковые - вверх  */
-    width: 380px;
-    height: 190px;
-    /* поместить в нижний левый угол хлебец-декор before */
-    /* bottom: 0; одинаковые - вверх  */
-    /* поместить к правому краю */
-    right: 0;
-    /* background-repeat: no-repeat;  одинаковые - вверх  */
-    background-image: url("../images/decor-bread-large.png");
-    /* content: ""; одинаковые - вверх  */
-}
+// .footer::after {
+//     /* стал блоковым, вертикално располаг */
+//     /* position: absolute; одинаковые - вверх  */
+//     width: 380px;
+//     height: 190px;
+//     /* поместить в нижний левый угол хлебец-декор before */
+//     /* bottom: 0; одинаковые - вверх  */
+//     /* поместить к правому краю */
+//     right: 0;
+//     /* background-repeat: no-repeat;  одинаковые - вверх  */
+//     background-image: url("../images/decor-bread-large.png");
+//     /* content: ""; одинаковые - вверх  */
+// }
 
-.footer-container {
-    display: flex;
-    /* между блоками крупными 2-мя - элементами flex (nav и address) родительского footer-container */
-    gap: 20px;
-}
+// .footer-container {
+//     display: flex;
+//     /* между блоками крупными 2-мя - элементами flex (nav и address) родительского footer-container */
+//     gap: 20px;
+// }
 
-.footer-nav,
-.footer-address {
-    /* для логотип и список ul стали в один ряд */
-    display: flex;
-    flex-basis: 50%;
-    /* между блоками- элементами flex каждого родительского. попарно */
-    gap: 20px;
-}
+// .footer-nav,
+// .footer-address {
+//     /* для логотип и список ul стали в один ряд */
+//     display: flex;
+//     flex-basis: 50%;
+//     /* между блоками- элементами flex каждого родительского. попарно */
+//     gap: 20px;
+// }
 
-/* .footer-address {
-  чтобы ul и addres-info (copyright и ...) стали в ряд
-  display: flex;
-  flex-basis: 50%;
-} */
+// /* .footer-address {
+//   чтобы ul и addres-info (copyright и ...) стали в ряд
+//   display: flex;
+//   flex-basis: 50%;
+// } */
 
-.footer-logo,
-.footer-menu {
-    /* для логотип и список ul заняли по 50% в своем flex*/
-    flex-grow: 1;
-}
+// .footer-logo,
+// .footer-menu {
+//     /* для логотип и список ul заняли по 50% в своем flex*/
+//     flex-grow: 1;
+// }
 
-/* .footer-menu {
-  для логотип и список ul заняли по 50% в своем flex
-  flex-grow: 1;
-} */
+// /* .footer-menu {
+//   для логотип и список ul заняли по 50% в своем flex
+//   flex-grow: 1;
+// } */
 
-.address-list,
-.address-info {
-    flex-grow: 1;
-}
+// .address-list,
+// .address-info {
+//     flex-grow: 1;
+// }
 
-.address-link {
-    color: var(--color-primary-light);
-    font-size: 16px;
-    font-weight: 300;
-    text-decoration: none;
-}
+// .address-link {
+//     color: var(--color-primary-light);
+//     font-size: 16px;
+//     font-weight: 300;
+//     text-decoration: none;
+// }
 
-.address-link:hover {
-    color: var(--color-brand-normal);
-}
+// .address-link:hover {
+//     color: var(--color-brand-normal);
+// }
 
-.address-icon {
-    fill: var(--color-primary-light);
-    /* обводка иконки  */
-    /* stroke: red; */
-}
+// .address-icon {
+//     fill: var(--color-primary-light);
+//     /* обводка иконки  */
+//     /* stroke: red; */
+// }
 
-.address-icon:hover {
-    fill: var(--color-brand-normal);
-}
+// .address-icon:hover {
+//     fill: var(--color-brand-normal);
+// }
 
-.address-copyright {
-    font-size: 14px;
-    /* 400 inheryt от body} */
-    color: var(--color-secondary-normal);
-}
+// .address-copyright {
+//     font-size: 14px;
+//     /* 400 inheryt от body} */
+//     color: var(--color-secondary-normal);
+// }
+
+// часть из main.scss перенесена в /layouts/_footer.scss 
+@import './layouts/footer';
 
 /* .test-box {
   width: 300px;
